Decrease size of logo, icons, expand search input to match twitter

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -40,7 +40,7 @@
 			display: inline-block;
 			a {
 				display: inline-block;
-				padding: 10px 15px 10px 15px;
+				padding: 10px 15px 8px 15px;
 				@media (min-width: 768px) and (max-width: 991px) {
 				   	padding: 10px 6px 10px 8px !important;
 				}
@@ -52,13 +52,20 @@
 					transition: all 0s ease-in-out;
 					border-bottom: 5px solid #55acee;
 					background: none;
+					span.fa {
+						color: #55acee;
+					}
 				}
 				span.fa {
 					margin-right: 5px;
-					font-size: 24px;
+					font-size: 20px;
 					position: relative;
 					top: 3px;
 					color: rgb(102, 117, 127);
+				}
+				span.nav-item-title {
+					font-size: 13px;
+					margin-left: 3px;
 				}
 			}
 		}
@@ -77,18 +84,21 @@
 		> img {
 			float: left; 
 			margin-left: 0;
+			height: 34px;
+			margin-top: 5.5px;
 		}
 	}
 		.global-search-container {
-			padding-top: 8px;
+			padding-top: 7px;
 			#global-search-input { 
 				color: #292f33;
 				background-color: #f5f8fa;
 				border: 1px solid #e1e8ed;
 				border-radius: 21px;
 				width: auto;
-				padding: 8px;
-				min-width: 150px;
+				padding: 8px 10px;
+				font-size: 12px;
+				width: 218px;
 				&:focus {
 					color: #292f33;
 					text-shadow: none;
@@ -100,7 +110,7 @@
 			}
 			@media (min-width: 768px) and (max-width: 991px) {
 				#global-search-input {
-					width: 100px;
+					width: 160px;
 				}
 			}
 		}
