--- a/app/views/global-search-form.html
+++ b/app/views/global-search-form.html
@@ -1,3 +1,4 @@
 <form class="global-search-container" ng-submit="root.submitSearchForm()">
     <input type="text" id="global-search-input"  name="q" placeholder="Search" ng-model="root.globalSearchTerm">
+    <i class="fa fa-search"></i>
 </form>
