Reduce sign in button as well

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -160,9 +160,9 @@
 					display: inline-block;
 					color: white;
 					button {
-						height: 40px;
-						margin-top: 5px;
-						margin-bottom: 7px;
+						height: 32px;
+						margin-top: 7px;
+						padding: 6px 12px !important;
 						background-color: #55acee;
 						color: white;
 						border: none;
