--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -19,37 +19,14 @@
             <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default"><i class="fa fa-align-justify"></i></a>
         </div>
         <div class="drawer-contents">
+             {{followers.id_str[3]}}
+           aa {{followers.preview[3]}}
             <div style="height:50%; overflow-y:scroll;">
            <h3>Followers</h3><hr>
 
-           <div ng-repeat="i in followers.id_str track by $index">
-            {{index}}
-            {{followers.id_str[i]}}
-            <div class="home-user-info" style="width:100%;">
-                <div class="blue-background-placeholder">
-                    <img ng-src="{{followers.profile_banner[i]}}" >    
-                </div>
-                    <div class="home-user-info-content">
-                       <div class="top-content">
-                        <img ng-src="{{followers.propic[i]}}">
-                            <div class="name-and-screen-name">
-                                <span class="home-user-name">{{followers.name[index]}}</span><br>
-                           <span class="home-user-screen-name">@{{followers.screenname[i]}}</span>
-                        </div>
-                    </div>
-                     <div class="bottom-content">
-                        <div class="user-no-tweets">
-                            <a href="">Tweets<br><span>{{followers.tweetcount[i]}}</span></a>
-                       </div>
-                        <div class="user-no-followings">
-                            <a href="">Followings<br><span>{{followers.following[i]}}</span></a>
-                        </div>
-                        <div class="user-no-followers">
-                            <a href="">Followers<br><span>{{followers.followers[i]}}</span></a>'
-                        </div
-                     </div>
-                </div>
-             </div>
+           <li ng-repeat="preview in followers.preview" ng-bind-html-unsafe="preview">
+            {{preview}}
+             </li>
             
         <hr>
     </div>
