--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -85,10 +85,10 @@
                                 </div>
                                 <div class="tab-pane" id="content">
                                     <div>
-                                        <div class="box-header">
+                                        <!-- <div class="box-header">
                                             <h3 class="box-title">What should show up on your tweet wall?</h3>
-                                        </div>
-                                        <div class="box-body" id="accordion">
+                                        </div> -->
+                                        <!-- <div class="box-body" id="accordion">
                                             <p class="text-muted">Don't worry, you can leave some fields blank if you want.</p>
                                             <div class="panel box">
                                                 <div class="box-header with-border">
@@ -115,7 +115,7 @@
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label>These hashtags</label>
-                                                                    <!-- <p>Main hashtag</p> -->
+                                                                    <p>Main hashtag</p>
                                                                     <div class="input-group">
                                                                         <span ng-if="newWallOptions.mainHashtagText.length>0" class="mainhashtag-addon input-group-addon">{{newWallOptions.mainHashtag}}</span>
                                                                         <span class="input-group-addon">#</span>
@@ -216,6 +216,40 @@
                                                     <div class="box-body">
                                                         <h4>Coming soon.</h4>
                                                     </div>
+                                                </div>
+                                            </div>
+                                        </div> -->
+                                        <div class="box-body row">
+                                            <div class="col-xs-5">
+                                                <div class="wall-float-container">
+                                                    <i class="fa fa-check-circle fa-3x wall-float-icon-contains"></i>
+                                                    <div class="wall-float-text">
+                                                        <h3>What do you want to show?<br><small>You can add keywords, #hashtags and @users</small></h3></div>
+                                                </div>
+                                                <h4>Show all tweets that contain:</h4>
+                                                <h4 ng-if="newWallOptions.mainHashtagText.length>0">Main hashtag: <span class="label label-primary">{{newWallOptions.mainHashtag}}</span></h4>
+                                                <div class="form-group wall-tag-label-contain">
+                                                    <label class="wall-contains-header">All of these</label>
+                                                    <tags-input class="wall-tag-input" ng-model="newWallOptions.all" placeholder="Type and hit enter" name="ands"></tags-input>
+                                                </div>
+                                                <div class="form-group wall-tag-label-contain">
+                                                    <label class="wall-contains-header">Any of these</label>
+                                                    <tags-input class="wall-tag-input" ng-model="newWallOptions.any" placeholder="Type and hit enter" name="ands"></tags-input>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-1 wall-vertical-line">
+                                                
+                                            </div>
+                                            <div class="col-xs-5">
+                                                <div class="wall-float-container">
+                                                    <i class="fa fa-minus-circle fa-3x wall-float-icon-not-contains"></i>
+                                                    <div class="wall-float-text">
+                                                        <h3>What do you want to exclude?<br><small>You can add keywords, #hashtags and @users</small></h3></div>
+                                                </div>
+                                                <h4>Show all tweets that DO NOT contain:</h4>
+                                                <div class="form-group wall-tag-label-not-contain">
+                                                    <label class="wall-not-contains-header">None of these</label>
+                                                    <tags-input class="wall-tag-input" ng-model="newWallOptions.none" placeholder="Type and hit enter" name="ands"></tags-input>
                                                 </div>
                                             </div>
                                         </div>
