Better toggle switch style

--- a/app/styles/wall.scss
+++ b/app/styles/wall.scss
@@ -26,6 +26,11 @@
 	    border-radius: 5%;
 	}
 
+	.wall-toggle-switch {
+		border-radius: 2px;
+		border-color: #A79E9E;
+	}
+
 	.wall-preview {
 	    background-color: #aaa;
 	    border: 22px solid #C8C8C8;
