--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -72,7 +72,7 @@
                                                 <div class="form-group">
                                                     <label>Show statistics</label>
                                                     <br>
-                                                    <toggle-switch on-label="YES" off-label="NO" ng-model="newWallOptions.showStatistics">
+                                                    <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showStatistics">
                                                         <toggle-switch>
                                                 </div>
                                             </div>
