Small design fix

--- a/app/styles/wall.scss
+++ b/app/styles/wall.scss
@@ -169,6 +169,7 @@
 	.wall-tag-label-not-contain {
 		border: 1px solid #b35e51;
 		border-radius: 5px;
+		margin-top: 10px;
 	}
 
 	.wall-vertical-line {
