Change twitter users' link everywhere to search link with param q=from:user

--- a/app/views/search-modal.html
+++ b/app/views/search-modal.html
@@ -5,7 +5,7 @@
     			 onError="this.onerror=null;this.src='/images/anon_200x200.png';"
     			 ng-src="{{modalData.user.profile_image_url_https}}" alt="user-images">
     			<!-- Metadata modalData -->
-    		    <a class="name" ng-href="{{'https://twitter.com/' + modalData.user.screen_name}}">{{modalData.user.name}}</a>
+    		    <a class="name" ng-href="{{'./search?q=from:' + modalData.user.screen_name}}">{{modalData.user.name}}</a>
     		    <span class="screen-name">{{ "@" + modalData.user.screen_name}}</span>	
     	</div>
         
