--- a/app/views/account.html
+++ b/app/views/account.html
@@ -8,7 +8,7 @@
     <!-- Main content -->
         <div class="tweet-content">
         	<!-- Metadata -->
-                <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
+                <a class="name" ng-href="{{'./search?q=from:' + data.user.screen_name}}">{{data.user.name}}</a>
                 <span class="screen-name">{{ "@" + data.user.screen_name}}</span>
             <!-- End of metadata -->
         </div>
