--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -90,7 +90,7 @@
                                                 <div class="wall-float-container">
                                                     <i class="fa fa-check-circle fa-3x wall-float-icon-contains"></i>
                                                     <div class="wall-float-text">
-                                                        <h3>What do you want to show?<br><small>You can add keywords, #hashtags, @mentions and from:user</small></h3></div>
+                                                        <h3>What do you want to show?<br><small>Add words, #hashtags, @mentions and from:user</small></h3></div>
                                                 </div>
                                                 <h4 ng-if="newWallOptions.mainHashtagText.length>0">Main hashtag: <span class="label label-primary">{{newWallOptions.mainHashtag}}</span></h4>
                                                 <div class="form-group wall-tag-label-contain">
@@ -108,7 +108,7 @@
                                                 <div class="wall-float-container">
                                                     <i class="fa fa-minus-circle fa-3x wall-float-icon-not-contains"></i>
                                                     <div class="wall-float-text">
-                                                        <h3>What do you want to exclude?<br><small>You can add keywords, #hashtags, @mentions and from:user</small></h3></div>
+                                                        <h3>What do you want to exclude?<br><small>Add words, #hashtags, @mentions and from:user</small></h3></div>
                                                 </div>
                                                 <div class="form-group wall-tag-label-not-contain">
                                                     <label class="wall-not-contains-header">Show tweets that contain NONE of these</label>
